tests/ui/union/unnamed-fields/restrict_type_hir.stderr
error: unnamed fields can only have struct or union types
  --> $DIR/restrict_type_hir.rs:31:5
   |
LL |     _: i32,
   |     ^^^^^^

error: unnamed fields can only have struct or union types
  --> $DIR/restrict_type_hir.rs:32:5
   |
LL |     _: MyI32,
   |     ^^^^^^^^

error: unnamed fields can only have struct or union types
  --> $DIR/restrict_type_hir.rs:33:5
   |
LL |     _: BadEnum,
   |     ^^^^^^^^^^

error: unnamed fields can only have struct or union types
  --> $DIR/restrict_type_hir.rs:34:5
   |
LL |     _: BadEnum2,
   |     ^^^^^^^^^^^

error: named type of unnamed field must have `#[repr(C)]` representation
  --> $DIR/restrict_type_hir.rs:36:5
   |
LL |     _: dep::BadStruct,
   |     ^^^^^^^^^^^^^^^^^ unnamed field defined here
   |
  ::: $DIR/auxiliary/dep.rs:4:1
   |
LL | pub struct BadStruct(());
   | -------------------- `BadStruct` defined here
   |
help: add `#[repr(C)]` to this struct
  --> $DIR/auxiliary/dep.rs:4:1
   |
LL + #[repr(C)]
LL | pub struct BadStruct(());
   |

error: unnamed fields can only have struct or union types
  --> $DIR/restrict_type_hir.rs:37:5
   |
LL |     _: dep::BadEnum,
   |     ^^^^^^^^^^^^^^^

error: unnamed fields can only have struct or union types
  --> $DIR/restrict_type_hir.rs:38:5
   |
LL |     _: dep::BadEnum2,
   |     ^^^^^^^^^^^^^^^^

error: unnamed fields can only have struct or union types
  --> $DIR/restrict_type_hir.rs:39:5
   |
LL |     _: dep::BadAlias,
   |     ^^^^^^^^^^^^^^^^

error: aborting due to 8 previous errors

